--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -98,7 +98,7 @@
 
         <figure class="solutions-2">
             <img class="solutions-figure" src="assets/images/solutions-photo.png" aria-hidden="true">
-            <a class="button solutions-cta" href="#">Work With Me</a>
+            <a class="button solutions-cta" href="#" title="Results Gauranteed!">Work With Me</a>
         </figure>
     </div></section>
 
@@ -162,7 +162,7 @@
             <ul class="portfolio-1">
                 <li><p class="section-title">My Recent Work</p></li>
                 <li>Explore apps I've built for clients and myself. Want to learn more?</li>
-                <li><a class="anchor-green" href="#" title="Message Me">Let's Connect</a>.</li>
+                <li><a class="anchor-blue" href="#" title="Message Me">Let's Connect</a>.</li>
             </ul>
 
             <ul class="portfolio-2">
@@ -189,7 +189,7 @@
             <ul class="testimonials-1"><li>
                 <p class="section-title">Testimonials</p>
                 <p>What people have said about the apps I've crafted.</p> 
-                <p><a class="anchor-green" href="#" title="Message Me">Let's Work Together</a>.</p>
+                <p><a class="anchor-blue" href="#" title="Message Me">Let's Work Together</a>.</p>
             </li></ul>
 
             <ul class="testimonials-2">
@@ -201,8 +201,8 @@
                     <p><span class="bold-normal">Work Title</span> | Some Company</p>
                 </li>
                 <li>
-                    <span><a class="anchor-green" href="#" title="Previous Advocate">&larr; Previous</a></span>
-                    <span><a class="anchor-green" href="" title="Next Advocate">Next &rarr;</a></span>
+                    <span><a class="anchor-blue" href="#" title="Previous Advocate">&larr; Previous</a></span>
+                    <span><a class="anchor-blue" href="" title="Next Advocate">Next &rarr;</a></span>
                 </li>
             </ul>
         </section>
@@ -216,7 +216,7 @@
         <li>
             <h1>Let's Collaborate</h1>
             <p>Ready to discuss full-time opportunities or freelance projects? I'm here to deliver results for you.</p>
-            <a class="button footer-cta" href="#" aria-label="Message me about your needs">Message Me About Your Needs</a>
+            <a class="button footer-cta" href="#" aria-label="Message me about your needs" title="Let's Collaborate.">Message Me About Your Needs</a>
         </li>
         <li>
             <a href="#" title="View My Work History"><img class="img-smaller"  src="assets/images/nav-linkedin.png" alt="Open my LinkedIn."></a>
