mobile-section: updates

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -51,7 +51,7 @@
                 </ul>
                 <ul class="menu-mobile">
                     <li>
-                        <button class="nav-toggle" aria-controls="nav-mobile" aria-expanded="false">
+                        <button class="nav-toggle" aria-controls="mobile-section" aria-expanded="false">
                             <img src="assets/images/nav-mobile-open.png" alt="Open the mobile menu.">
                         </button>
                     </li>
@@ -60,10 +60,10 @@
         </div>
     </header>
 
-    <section class="mobile-section">
-        <nav id="nav-mobile" role="menu">
-            <button class="nav-toggle" aria-controls="nav-mobile" aria-expanded="true">
-                <img src="assets/images/nav-mobile-close.png" alt="Close the mobile menu.">
+    <section id="mobile-section">
+        <nav class="nav-mobile" role="menu">
+            <button aria-controls="mobile-section" aria-expanded="true">
+                <span class="sr-only">Close the mobile menu.</span>
             </button>
 
             <ul class="section-subtitle">
