--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -52,8 +52,8 @@
                 </ul>
                 <ul class="menu-mobile">
                     <li>
-                        <button class="toggle-open" aria-controls="mobile-section" aria-expanded="false">
-                            <img src="assets/images/nav-mobile-open.png" alt="Open the mobile menu.">
+                        <button class="toggle-open" aria-controls="mobile-section">
+                            <img src="assets/images/nav-mobile-open.png" alt="Open the mobile menu." title="Open Menu">
                         </button>
                     </li>
                 </ul>
@@ -61,9 +61,9 @@
         </div>
     </header>
 
-    <section id="mobile-section" data-visible="false">
+    <section id="mobile-section" data-visible="false"  aria-expanded="false">
         <nav class="nav-mobile" role="menu">
-            <button class="toggle-close" aria-controls="mobile-section" aria-expanded="true">
+            <button class="toggle-close" aria-controls="mobile-section">
                 <span class="sr-only">Close the mobile menu.</span>
             </button>
 
