commplete: mobile menu, skip navigation

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -10,6 +10,7 @@
     <script src="assets/js/mobile-menu-toggle.js" defer></script>
 </head>
 <body>
+    <a class="skip-to-content" href="#explore">Skip to content</a>
 
     <header>
         <div class="header">
